[gd_scene load_steps=5 format=3 uid="uid://dmmabi2yb2gi1"]

[ext_resource type="Script" path="res://scripts/line_controller.gd" id="1_8q1tr"]
[ext_resource type="Texture2D" uid="uid://cdkh44kur7uis" path="res://icon.svg" id="2_f8cei"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o0com"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6vant"]

[node name="LineController" type="Node2D"]
position = Vector2(577, 343)
script = ExtResource("1_8q1tr")
line_width = 20.0

[node name="Line2D" type="Line2D" parent="."]
unique_name_in_owner = true
points = PackedVector2Array(-20, 0, 20, 0)
joint_mode = 2

[node name="PointA" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(80, 0)

[node name="Sprite2D" type="Sprite2D" parent="PointA"]
texture = ExtResource("2_f8cei")

[node name="Area2D" type="Area2D" parent="PointA"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PointA/Area2D"]
shape = SubResource("RectangleShape2D_o0com")

[node name="PointB" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(-80, 0)

[node name="Sprite2D" type="Sprite2D" parent="PointB"]
texture = ExtResource("2_f8cei")

[node name="Area2D" type="Area2D" parent="PointB"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PointB/Area2D"]
shape = SubResource("RectangleShape2D_6vant")
